embedchat api extention
